# Experimental_Robotics_assignment_1

./: README.md
Expermental_Robotics_Assignment_1/assignment1_exp_rob_lab/: CMakeLists.txt  package.xml  setup.py
Expermental_Robotics_Assignment_1/assignment1_exp_rob_lab/config/: rvizconfig.rviz
Expermental_Robotics_Assignment_1/assignment1_exp_rob_lab/launch/: MarkerBasedNavigation.launch  MarkerBasedNavigation_Full.launch
Expermental_Robotics_Assignment_1/assignment1_exp_rob_lab/src/: ArUcoMarkerExtractor.py  MarkerBasedNavigation.py
Expermental_Robotics_Assignment_1/assignment1_exp_rob_lab/worlds/: aruco_assignment.world
